@@ -1,10 +1,12 @@
 package com.zm.zmbackend.config;
 
+import com.zm.zmbackend.filter.JwtAuthenticationFilter;
 import com.zm.zmbackend.services.impl.UserServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -12,6 +14,7 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -25,18 +28,24 @@ import java.util.List;
 @Getter
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
 
     private final UserServiceImpl userService;
     private final CustomOAuth2UserService customOAuth2UserService;
     private final OAuth2AuthenticationSuccessHandler oAuth2AuthenticationSuccessHandler;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
     @Lazy
     @Autowired
     public SecurityConfig(CustomOAuth2UserService customOAuth2UserService,
-                          OAuth2AuthenticationSuccessHandler oAuth2AuthenticationSuccessHandler, UserServiceImpl userService) {
+                          OAuth2AuthenticationSuccessHandler oAuth2AuthenticationSuccessHandler, 
+                          UserServiceImpl userService,
+                          JwtAuthenticationFilter jwtAuthenticationFilter) {
         this.userService = userService;
         this.customOAuth2UserService = customOAuth2UserService;
         this.oAuth2AuthenticationSuccessHandler = oAuth2AuthenticationSuccessHandler;
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
     }
 
     @Bean
@@ -46,7 +55,26 @@ public class SecurityConfig {
             .csrf(AbstractHttpConfigurer::disable)
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(authorize -> authorize
+                // Public endpoints
                 .requestMatchers("/api/users/login", "/api/users/register", "/oauth2/**").permitAll()
+                .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+
+                // Car endpoints - only GET operations are allowed for all users
+                .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/cars/**").permitAll()
+                // Block POST, PUT, DELETE operations on cars for regular users
+                .requestMatchers(org.springframework.http.HttpMethod.POST, "/api/cars/**").denyAll()
+                .requestMatchers(org.springframework.http.HttpMethod.PUT, "/api/cars/**").denyAll()
+                .requestMatchers(org.springframework.http.HttpMethod.DELETE, "/api/cars/**").denyAll()
+
+                // User endpoints - require authentication and proper authorization
+                .requestMatchers("/api/users/**").hasRole("USER")
+
+                // Block admin access to database operations
+                .requestMatchers("/api/admin/**").denyAll()
+                .requestMatchers("/h2-console/**").denyAll()
+                .requestMatchers("/actuator/db-metrics/**").denyAll()
+
+                // All other endpoints require authentication
                 .anyRequest().authenticated()
             )
             .oauth2Login(oauth2 -> oauth2
@@ -54,7 +82,9 @@ public class SecurityConfig {
                     .userService(customOAuth2UserService)
                 )
                 .successHandler(oAuth2AuthenticationSuccessHandler)
-            );
+            )
+            // Add JWT filter before UsernamePasswordAuthenticationFilter
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -62,10 +92,27 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-user-id"));
-        configuration.setExposedHeaders(List.of("authorization"));
+        // Allow specific origins instead of "*" for better security
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:3000",  // React development server
+            "http://localhost:8080",  // Local development server
+            "https://yourdomain.com"  // Production domain (replace with your actual domain)
+        ));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization", 
+            "Content-Type", 
+            "X-User-ID", 
+            "Access-Control-Allow-Origin", 
+            "Access-Control-Allow-Headers", 
+            "Origin"
+        ));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Disposition"));
+        // Allow cookies for cross-origin requests if needed
+        configuration.setAllowCredentials(true);
+        // Cache preflight requests for 1 hour (3600 seconds)
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
